# expression-calculator

./: CMakeLists.txt  README.md
doc/: todo.md
docs/: todo.md
scripts/: connection_test.sh
src/: main.cpp
src/calculator/: parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
src/generator/: main.cpp
src/server/: server.cpp  server.hpp  worker.cpp  worker.hpp
tests/: parser_test.cpp  tokenizer_test.cpp
